MDEV-6163: Error while executing an update query that has the same table in a sub-query

We have to run the derived table prepare before the unique table check to mark the derived table (in this case the unique table check can turn that table to materialized one).